class Cancion {
    private String titulo;
    
    public Cancion(String titulo) { 
        this.titulo = titulo; 
    }
    public String getTitulo() { return titulo; }
}