class Concierto {
    private String ciudad;
    
    public Concierto(String ciudad) { 
        this.ciudad = ciudad; 
    }
    public String getCiudad() { return ciudad; }
}